# Django-blog

./: 1.txt  LICENSE  pyproject.toml
src/: db.sqlite3
src/account/: views.py
src/account/migrations/: 0001_initial.py
src/blog/: admin.py  api.py  forms.py  models.py  tests.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py  0003_comment.py  0004_alter_comment_options_rename_name_comment_user_and_more.py  0005_post_tags.py
src/blog/templates/blog/: base.html
src/blog/templates/blog/post/: comment_form.html  list.html  pagination.html
src/django_blog/: settings.py  urls.py
src/templates/: base.html  nav.html
src/templates/account/: login.html  profile.html  signup.html
src/templates/blog/: base.html
src/templates/blog/post/: comment.html  comment_form.html  detail.html  list.html  pagination.html  share.html
src/templates/registration/: logged_in.html  logged_out.html
src/templatetags/: forms_tags.py
